added social icon hover states

--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,11 @@ main {
 }
 .icon--social {
     cursor: pointer;
+    fill: #584D62;
+}
+
+.icon--social:hover {
+    fill: var(--dark-purple);
 }
 
 /* Extra small devices (phones, 600px and down) */
